fix small issue in buildsystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,25 +82,32 @@ endif()
 
 include(CheckIncludeFileCXX)
 
-if (BOOST_ROOT)
-    get_filename_component(BOOST_ROOT "${BOOST_ROOT}" ABSOLUTE)
-	set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
-else()
-	find_or_build_package(BOOST boost)
-	# we should think about cmake superbuild with ExternalProject_Add as the replacement for find_or_build_package (next generation)
-	FILE(READ "${EXTERNAL_DIR}/.boost.dist" BOOST_DIST_NAME)
-	STRING(REGEX REPLACE "\n" "" BOOST_DIST_NAME "${BOOST_DIST_NAME}")
-	get_filename_component(BOOST_ROOT "${EXTERNAL_DIR}/${BOOST_DIST_NAME}" ABSOLUTE)
-	message(STATUS "BOOST_ROOT from "${EXTERNAL_DIR}/.boost.dist": ${BOOST_ROOT}")
-	set(BOOST_ROOT ${BOOST_ROOT}  CACHE FILEPATH "Boost root distribution")
+if (NOT Boost_INCLUDE_DIR)
+    if (BOOST_ROOT)
+        get_filename_component(BOOST_ROOT "${BOOST_ROOT}" ABSOLUTE)
+        set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
+    else()
+        find_or_build_package_check(Boost boost Boost_INCLUDE_DIR)
+        # we should think about cmake superbuild with ExternalProject_Add as the replacement for find_or_build_package (next generation)
+        if (NOT Boost_INCLUDE_DIR)
+            FILE(READ "${EXTERNAL_DIR}/.boost.dist" BOOST_DIST_NAME)
+            STRING(REGEX REPLACE "\n" "" BOOST_DIST_NAME "${BOOST_DIST_NAME}")
+
+            get_filename_component(BOOST_ROOT "${EXTERNAL_DIR}/${BOOST_DIST_NAME}" ABSOLUTE)
+
+            message(STATUS "BOOST_ROOT from ${EXTERNAL_DIR}/.boost.dist: ${BOOST_ROOT}")
+
+            set(BOOST_ROOT ${BOOST_ROOT}  CACHE FILEPATH "Boost root distribution")
 	
-	set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
-	get_filename_component(Boost_INCLUDE_DIR "${Boost_INCLUDE_DIR}" ABSOLUTE)
-	message(STATUS "Boost_INCLUDE_DIR, ${Boost_INCLUDE_DIR}")	
-	#exit()
+            set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
+            get_filename_component(Boost_INCLUDE_DIR "${Boost_INCLUDE_DIR}" ABSOLUTE)
+            message(STATUS "Boost_INCLUDE_DIR, ${Boost_INCLUDE_DIR}")	
+        endif()
+        #exit()
+    endif(BOOST_ROOT)
+    message(STATUS "BOOST_ROOT, ${BOOST_ROOT}")
 endif()
 
-message(STATUS "BOOST_ROOT, ${BOOST_ROOT}")
 message(STATUS "Boost_INCLUDE_DIR, ${Boost_INCLUDE_DIR}")
 
 if (MSVC)
