--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
     # Travis uses cmake 2.8.7 by default (too old for gimli)
     - sudo add-apt-repository ppa:kalakris/cmake -y
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    - sudo add-apt-repository --yes ppa:boost-latest/ppa
     - sudo apt-get update -qq
     - sudo apt-get install -qq cmake
 
@@ -27,11 +28,14 @@ before_install:
     - gcc --version
     - g++ --version
 
+    # Boost 1.55
+    - sudo apt-get install -qq libboost-system1.55-dev libboost-thread1.55-dev libboost-python1.55-dev
+
     # Main build dependencies
     - sudo apt-get install -qq build-essential libcppunit-dev
     - if [[ $TRAVIS_PYTHON_VERSION == "2.7" ]]; then sudo apt-get install -qq python-dev python-numpy; fi
     - if [[ $TRAVIS_PYTHON_VERSION == "3.2" ]]; then sudo apt-get install -qq python3-dev python3-numpy; fi
-    - sudo apt-get install -qq libboost-all-dev libblas-dev liblapack-dev
+    - sudo apt-get install -qq libblas-dev liblapack-dev
     - sudo apt-get install -qq libsuitesparse-dev
 
     # Documentation dependencies
@@ -55,7 +59,7 @@ install:
     - cd build
     - cmake ../trunk
     - make -j 4 gimli
-    - make pygimli J=4
+    - make pygimli J=2
       
 script:
     # Test gimli
