--- a/doc/sidebar_gallery.py.in
+++ b/doc/sidebar_gallery.py.in
@@ -48,10 +48,10 @@ titles = ex_titles + tut_titles
 # TODO: Account for true path structure once uploaded to gimli.org
 
 
-examples = [e.replace("@SPHINX_SRC_DIR@/doc/examples", "/doc/_examples_auto")
+examples = [e.replace("@SPHINX_SRC_DIR@/doc/examples", "doc/_examples_auto")
             for e in examples]
 
-tutorials = [t.replace("@SPHINX_SRC_DIR@/doc/tutorials", "/doc/_tutorials_auto")
+tutorials = [t.replace("@SPHINX_SRC_DIR@/doc/tutorials", "doc/_tutorials_auto")
              for t in tutorials]
 
 # Create HTML gallery for sidebar with random start item
@@ -87,7 +87,7 @@ for ix, (item, title) in enumerate(zip(gallery, titles)):
     name = basename(item)
     url = join(dir, name.replace(".py", ".html"))
     img = join(img_dir, name.replace(".py", "_1.png"))
-    #print(url, img)
+    print(url, img)
     item = html_item.format(url, img, title)
 
     if ix == id:
