--- a/doc/sidebar_gallery.py.in
+++ b/doc/sidebar_gallery.py.in
@@ -8,6 +8,8 @@ Description: Add all examples/tutorials to sidebar gallery
 Created on: 2013-10-13
 """
 
+from __future__ import print_function
+import os
 from glob import glob
 from os.path import abspath, join, dirname, basename
 import random
@@ -16,17 +18,21 @@ import random
 #  Path settings  #
 ###################
 
-cwd = abspath(dirname(__file__))
-build_dir = "@CMAKE_CURRENT_BINARY_DIR@/html"
+publish = os.getenv("PUBLISH")
+if publish:
+    build_dir = "http://www.pygimli.org"
+else:
+    build_dir = "@CMAKE_CURRENT_BINARY_DIR@/html"
+
 example_dir = "@SPHINX_SRC_DIR@/doc/examples"
 tutorial_dir = "@SPHINX_SRC_DIR@/doc/tutorials"
-img_dir = "_images"
+img_dir = join(build_dir, "_images")
 
 #print(example_dir)
 #print("@CMAKE_CURRENT_BINARY_DIR@")
 # Get examples/tutorials
-examples = glob(join(example_dir, '*/*plot*.py'))
-tutorials = glob(join(tutorial_dir, '*/*plot*.py'))
+examples = glob(join(example_dir, "*/*plot*.py"))
+tutorials = glob(join(tutorial_dir, "*/*plot*.py"))
 
 # Get captions
 def readRSTSecTitles(fname, verbose=False):
@@ -46,12 +52,10 @@ titles = ex_titles + tut_titles
 
 # Adjust paths to output directory for html links
 # TODO: Account for true path structure once uploaded to gimli.org
-
-
-examples = [e.replace("@SPHINX_SRC_DIR@/doc/examples", "doc/_examples_auto")
+examples = [e.replace("@SPHINX_SRC_DIR@/doc/examples", join(build_dir, "doc/_examples_auto"))
             for e in examples]
 
-tutorials = [t.replace("@SPHINX_SRC_DIR@/doc/tutorials", "doc/_tutorials_auto")
+tutorials = [t.replace("@SPHINX_SRC_DIR@/doc/tutorials", join(build_dir, "doc/_tutorials_auto"))
              for t in tutorials]
 
 # Create HTML gallery for sidebar with random start item
@@ -87,7 +91,7 @@ for ix, (item, title) in enumerate(zip(gallery, titles)):
     name = basename(item)
     url = join(dir, name.replace(".py", ".html"))
     img = join(img_dir, name.replace(".py", "_1.png"))
-    print(url, img)
+    #print(url, img)
     item = html_item.format(url, img, title)
 
     if ix == id:
