--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -25,9 +25,11 @@ import pygimli as pg
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
-#sys.path.insert(0, os.path.abspath('.'))
+# sys.path.insert(0, os.path.abspath('.'))
 sys.path.append(os.path.abspath('@SPHINX_SRC_DIR@/doc/_sphinx-ext'))
-#SPHINX_CACHE_DIR
+
+# The following line is necessary for the Tools section
+sys.path.append(os.path.abspath('@SPHINX_SRC_DIR@/python/apps'))
 
 # -- General configuration -----------------------------------------------------
 
@@ -35,7 +37,6 @@ sys.path.append(os.path.abspath('@SPHINX_SRC_DIR@/doc/_sphinx-ext'))
 needs_sphinx = '1.2'
 
 # Check for external sphinx extensions
-#deps = ['pybtex', 'sphinxcontrib-programoutput']
 deps = ['pybtex', 'sphinxcontrib-programoutput', 'sphinxcontrib-bibtex']
 modules = [str(m).rsplit()[0] for m in pip.get_installed_distributions()]
 
@@ -51,7 +52,6 @@ if req:
 # Add any Sphinx extension module names here, as strings. They can be extensions
 # coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
 extensions = ['sphinx.ext.autodoc',
-              'sphinx.ext.todo',
               'sphinx.ext.doctest',
               'sphinx.ext.viewcode',
               'sphinx.ext.autosummary',
@@ -93,7 +93,7 @@ master_doc = 'doc/index'
 
 # General information about the project.
 project = 'GIMLi'
-copyright = u'2014, GIMLi Group'
+copyright = u'2015 - GIMLi Group'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
@@ -198,7 +198,7 @@ html_use_smartypants = True
 
 # Additional templates that should be rendered to pages, maps page names to
 # template names.
-#html_additional_pages = {}
+html_additional_pages = {'index': 'index.html'}
 
 # If false, no module index is generated.
 html_domain_indices = True
@@ -232,7 +232,6 @@ html_show_copyright = True
 
 # Output file base name for HTML help builder.
 htmlhelp_basename = 'gimlidoc'
-html_additional_pages = {'index': 'index.html'}
 
 ############# -- Options for LaTeX output
 
@@ -381,12 +380,7 @@ for dist in pkg_resources.find_distributions("@SPHINX_SRC_DIR@/doc/_templates/py
 
 
 #End pybtex stuff
-
 # -- Options for doxylink ------------------------------------------------------
 doxylink = {
-    'gimliapi' : ('@DOXYGEN_BUILD_DIR@/gimli.tag', '@DOXYGEN_BUILD_DIR@/html/')
+    'gimliapi' : ('@DOXYGEN_BUILD_DIR@/gimli.tag', 'doc/gimliapi/html/')
 }
-
-# TEMP: Show TODOS while building documentation
-[extensions]
-todo_include_todos = True
